@@ -1,3 +1,9 @@
+2006-09-06  Richard Ferguson <ubuntu@fergusnet.com>
+	
+    * olive/frontend/gtk/launch.py: change tabs to spaces
+    * olive/frontend/gtk/handler.py: platform independence fixes
+    * olive/frontend/gtk/menu.py: platform independence fixes
+
 2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>
 	
     * olive/frontend/gtk/launch.py: new file to assist in launching files
